# agentic-partners-integration

./: .gitignore  Makefile  README.md  agent-service-coverage.json  docker-compose.yaml  request-manager-coverage.json
.badges/: kubernetes-partner-agent-coverage.json  shared-models-coverage.json
.github/workflows/: ci.yaml  security-audit.yml
agent-service/: Containerfile  pyproject.toml  run_a2a_server.py  test_a2a_e2e.py
agent-service/config/agents/: aro-support-agent.yaml  kubernetes-support-agent.yaml  network-support-agent.yaml  software-support-agent.yaml
agent-service/src/agent_service/: agents.py  config_utils.py  main.py  token_counter.py
agent-service/src/agent_service/a2a/: agent_cards.py  executor.py  server.py
agent-service/src/agent_service/llm/: base.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py
agent-service/tests/: conftest.py  test_a2a_agent_cards.py  test_a2a_executor.py  test_a2a_server.py  test_agents.py  test_config_utils.py  test_llm_base.py  test_llm_factory.py  test_llm_gemini.py  test_llm_ollama.py  test_llm_openai.py  test_main.py  test_schemas.py  test_token_counter.py
aro-partner-agent/: Containerfile  README.md  pyproject.toml
aro-partner-agent/config/agents/: aro-support-agent.yaml
aro-partner-agent/src/aro_agent/: __init__.py  agent.py  main.py  mcp_client.py  schemas.py
aro-partner-agent/tests/: conftest.py  test_agent.py  test_main.py  test_mcp_client.py  test_schemas.py
azure-mcp-server/: .env.example  Containerfile  az_shim.py  mcp_proxy.py
azure-mcp-server/tests/: test_mcp_proxy.py
data/: kubernetes_support_tickets.json
docs/: a2a-communication.md  aaa-security.md  api-reference.md  architecture.md  configuration.md  development.md  getting-started.md  production.md  rag.md  web-ui.md
helm/: README.md  values.yaml
helm/templates/: NOTES.txt  rag-api-deployment.yaml
keycloak/: realm-partner.json
kubernetes-partner-agent/: Containerfile  pyproject.toml  test_a2a_e2e.py
kubernetes-partner-agent/src/kubernetes_agent/: __init__.py  agent.py  main.py  schemas.py
kubernetes-partner-agent/src/kubernetes_agent/a2a/: __init__.py  agent_cards.py  executor.py  server.py
kubernetes-partner-agent/src/kubernetes_agent/llm/: __init__.py  base.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py
kubernetes-partner-agent/tests/: conftest.py  test_agent.py  test_executor.py  test_main.py
pf-chat-ui/: Containerfile  README.md
pf-chat-ui/static/: audit-events.html  audit.html  chat.html  login.html
policies/: agent_permissions.rego  delegation.rego  delegation_test.rego  user_permissions.rego
rag-service/: Containerfile  ingest_knowledge.py  rag_service.py
request-manager/: Containerfile  pyproject.toml
request-manager/src/request_manager/: aaa_middleware.py  adk_endpoints.py  agent_client_enhanced.py  auth_endpoints.py  communication_strategy.py  credential_service.py  main.py  normalizer.py
request-manager/tests/: conftest.py  test_aaa_middleware.py  test_adk_audit_events.py  test_adk_endpoints.py  test_agent_client_403.py  test_agent_client_enhanced.py  test_auth_endpoints.py  test_authentication.py  test_communication_strategy.py  test_communication_strategy_extra.py  test_credential_service.py  test_database_utils.py  test_main.py  test_normalizer.py  test_schemas.py
scripts/: README.md  build_containers.sh  setup.sh  sync_agent_capabilities.py  test.sh
shared-models/: pyproject.toml
shared-models/alembic/versions/: 001_consolidated_migration.py  002_partial_unique_constraint_for_sentinel_values.py  003_add_session_race_condition_fixes.py  004_add_knowledge_base_tables.py  005_add_user_roles_privileges.py  006_add_authentication_fields.py  007_drop_eventing_artifacts.py  008_spiffe_identity_departments.py  009_add_audit_events.py
shared-models/scripts/: integration_defaults_migration.py  migrate.py  smart_defaults_migration.py
shared-models/src/shared_models/: __init__.py  aaa_service.py  audit.py  database.py  identity.py  identity_middleware.py  models.py  opa_client.py  session_manager.py  session_schemas.py  utils.py
shared-models/tests/: conftest.py  test_aaa_service.py  test_audit.py  test_base.py  test_database.py  test_fastapi_utils.py  test_health.py  test_identity.py  test_identity_middleware.py  test_logging.py  test_models.py  test_opa_client.py  test_session_manager.py  test_session_schemas.py  test_session_token_service.py  test_user_utils.py  test_utils.py
