[project]
name = "partner-agent-request-manager"
version = "0.1.0"
description = "Request Management Layer for partner agent integration"
authors = [
    {name = "Partner Agent Team", email = "team@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0,<0.117.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",

    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "PyJWT>=2.8.0",
    "partner-agent-shared-models",
    "partner-agent-service",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/request_manager"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::sqlalchemy.exc.MovedIn20Warning",
    "ignore::DeprecationWarning:pydantic.*:",
    "ignore:coroutine '_session_cleanup_task' was never awaited:RuntimeWarning",
]

[tool.mypy]
python_version = "3.12"

# Configure mypy to use source directories for local packages
mypy_path = "../shared-models/src:../agent-service/src"

[tool.uv.sources]
partner-agent-shared-models = { path = "../shared-models" }
partner-agent-service = { path = "../agent-service" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
]
